--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,12 +24,12 @@
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/incrementButton" app:layout_constraintHorizontal_bias="0.493"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="30sp"/>
+            android:textSize="30sp" android:onClick="addOne"/>
     <Button
             android:text="@string/reset_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
-            android:layout_marginStart="4dp" android:id="@+id/resetButton"/>
+            android:layout_marginStart="4dp" android:id="@+id/resetButton" android:onClick="reset"/>
 
 </android.support.constraint.ConstraintLayout>
